cdn links are changed into local files

--- a/index.html
+++ b/index.html
@@ -2,45 +2,18 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>Javascript</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="CSS/bootstrap.min.css">
   <link rel="stylesheet" href="CSS/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="JS/query.min.js"></script>
+  <script src="JS/bootstrap.min.js"></script>
 
 
   <style type="text/css" media="screen">
-  #test1 {
-      background:#3F3;
-      position: absolute;
-      top:50px;
-      bottom:50px;
-      width:200px;
-      -webkit-transition-property: top, bottom;
-      -webkit-transition-duration: 10s;
-  }
-          #test {
-              background:#3F3;
-              position: absolute;
-              top:50px;
-              bottom:50px;
-              width:200px;
-              -webkit-transition-property: top, bottom;
-              -webkit-transition-duration: 10s;
-          }
-          #test:hover {
-              top:1000px;
-              bottom:1004px;
-          }
-          #test1:hover {
-              top:1000px;
-              bottom:1004px;
-          }
-      </style>
+
+  </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -67,8 +40,6 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <div id="test">Ganesh</div>
-  <div id="test1">Ganesh</div>
   <h1>Company</h1>
   <p>We specialize in blablabla</p>
   <form>
@@ -364,7 +335,6 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
 </footer>
 
 <script type="text/javascript" src="JS/script.js"></script>
