--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <script src="JS/bootstrap.min.js"></script>
 
 
+
   <style type="text/css" media="screen">
 
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+  
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
@@ -336,9 +338,10 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
 </footer>
+<script src="JS/dhanush.json"></script>
 
-<script type="text/javascript" src="JS/script.js"></script>
 <script>
+ 
 $(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
   $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
